# ai-interviewer

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
src/: App.tsx  index.css
src/components/: FeedbackReport.tsx  InterviewChat.tsx  ReportGeneratingOverlay.tsx  ScreenCapture.tsx  StatusIndicator.tsx  ThemeToggle.tsx
src/hooks/: useInterview.ts  useTheme.ts
src/services/: interview.service.ts  llm.service.ts  ocr.service.ts  stt.service.ts  tts.service.ts
src/types/: interview.types.ts
